--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,3 +1,9 @@
 .blue-background {
   background-color: lightblue;
 }
+
+.file-name:hover {
+  color: blue;
+  transition: 1s;
+  cursor: pointer;
+}
