--- a/client/src/style.css
+++ b/client/src/style.css
@@ -25,3 +25,23 @@
   margin: 15px;
   border-bottom: 2px solid darkgray;
 }
+
+.content-block textarea {
+  width: 75%;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.custom-btn-attr {
+  height: fit-content;
+  width: fit-content;
+  margin: 5px;
+}
+
+.btn-div {
+  width: 140px;
+}
+
+.delete {
+  color: red;
+}
